# appimage-launcher

./: CMakeLists.txt  README.md
docs/: README.zh_CN.md
include/AppImageManager/: AppImageManager.h  AutostartDaemon.h  MainWindow.h  Preferences.h  SettingsDialog.h  TranslationManager.h
resources/: appimagemanager.desktop  assets.qrc  translations.qrc
resources/i18n/: zh_CN.json
resources/systemd/: appimagemanager-daemon.service.in
src/: AppImageManager.cpp  AutostartDaemon.cpp  DaemonMain.cpp  MainWindow.cpp  Preferences.cpp  SettingsDialog.cpp  TranslationManager.cpp  main.cpp
